# Api/Heka/router.js
@@ -1,21 +1,8 @@
-const { cotizar } = require("./controllers");
+const { cotizar, auth } = require("./controllers");
 
 const express = require("express");
 const router = express.Router();
 
-/**
- * @openapi
- * /Api/Heka/Cotizar:
- *  get:
- *      tags: 
- *          - Heka 
- *      summary: Cotizador heka
- *      description: Permite cotizar directamente con servientrega, devolviendo una lista de resultados
- *      responses:
- *          200:
- *              description: Devuelve la respuesta de cotización.
- */
-router.get("/Cotizar", cotizar);
-router.post("/Cotizar", cotizar);
+router.post("/Cotizar", auth, cotizar);
 
 module.exports = router;
